--- a/Samples/java/Java SOAP Client/2. Consume public SOAP services/soapsoeclientapp/SoapSoeClient/pom.xml
+++ b/Samples/java/Java SOAP Client/2. Consume public SOAP services/soapsoeclientapp/SoapSoeClient/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>SoapSoeStubGenerator</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.esri.samples</groupId>
+            <artifactId>SimpleSoapSoe</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
